--- a/src/scss/innerpages.scss
+++ b/src/scss/innerpages.scss
@@ -30,6 +30,9 @@
         position:absolute;;
         bottom: 0;
         padding: 8% 10%;
+        a{
+            text-decoration: none;
+        }
         p{
             margin: 0;
             color: #fff;
