--- a/src/scss/innerpages.scss
+++ b/src/scss/innerpages.scss
@@ -11,10 +11,19 @@
 }
 .sidebar{
     background: #e6917d;
-    height:100vh;
     position: relative;
     .leftmenulogo{
         margin: 10% 0 25%;
+    }
+    .desktopst{
+        position: sticky;
+        top: 0;
+        height: 100vh;
+        padding: 10% 0;
+        .desktoprel{
+            position: relative;
+            height: 100vh !important;
+        }
     }
     .leftmenuitem{
         padding: 8% 10%;
@@ -28,7 +37,7 @@
     }
     .logoutdiv{
         position:absolute;;
-        bottom: 0;
+        bottom: 10%;
         padding: 8% 10%;
         a{
             text-decoration: none;
