--- a/src/scss/innerpages.scss
+++ b/src/scss/innerpages.scss
@@ -2,7 +2,9 @@
 *{
     margin: 0;
     padding: 0;
+    font-family:NotoSansTC-Medium;
 }
+
 .desktopHide{
     display: none;
 }
@@ -48,9 +50,47 @@
         }
     }
 }
+
+::-webkit-input-placeholder { 
+        color:#E0E0E0;
+      }
 .innerpageright{
+    
+    .style-box{
+        
+        padding-left: 10px;
+        padding-right:10px; 
+        padding-bottom: 3px;
+        padding-top:3px;
+        border: 1px solid #E0E0E0;
+        font-size: 16px;
+        
+    }
+   
+    .bookbutton{
+      
+        color:#E6917D;
+        border-width: thin;
+        padding: 5px 12px 5px 12px;
+        border-radius: 25px;
+        border-style: solid;
+        border-color: #E6917D;
+        width: fit-content;
+    }
+    .color-orange
+    {
+        color:#E6917D;
+    }
+         
     padding-top:4%;
     background-color: #fffaf8;
+    .formarea
+    {
+        display: flex;
+        // justify-content: space-around;
+    
+    }
+    
     .aiFormCard
        {
            height:250px;
@@ -68,6 +108,7 @@
     }
     .addBtn{
         color:#E6917D;
+        cursor:pointer;
     }
     .formOptionCard{
         background: #fff;
@@ -98,14 +139,50 @@
 }
 
 @media only screen and (min-device-width : 320px) and (max-device-width : 765px) {
+    .shift_end{
+        display: flex;
+        justify-content: end;
+
+    }
+    .discountimg
+    {
+        width: 100%;
+    }
+    .pad-top{
+        padding-top: 18px;
+        font-size: 16px;
+    }
+    .pad-bottom{
+        padding-bottom: 11px;
+    }
+    .display_none{
+        display:none;
+    }
+    .margin_top{
+        margin-top: 14px;
+    }
     .desktopHide{
         display: block;
     }
     .mobileHide{
         display: none;
     }
+    .input{
+        padding: 30px;
+    }
     .innerpageright
-    {
+    {   
+        .mobileform{
+            display: flex;
+            flex-direction: column;
+            width: fit-content;
+            padding:30px;
+        }
+        .mobileouterform
+        {
+            display: flex;
+            // flex-direction: row;
+        }
         .heading
         {
             margin:auto;
@@ -146,7 +223,43 @@
     }
 }
 @media only screen and (min-width: 768px) {
+    .discountimg
+    {
+        width: 100%;
+    }
     .innerpageright{
+        .padding-left-5{
+            padding-left: 5px;
+        }
+        .padding-left-10{
+            padding-left: 13px;
+        }
+        .padding-left-20{
+            padding-left:30px;
+        }
+        .labelmobileform{
+            width: 92%;
+            display: flex;
+            justify-content: space-evenly;
+            background-color: #e6917d;
+            background: #e6917d;
+            border-radius: 20px;
+            color: #fff;
+            box-shadow: 0 0 10px #8E8E8E;
+        }
+        .inputmobileform{
+            width: 88%;
+            display: flex;
+            justify-content: space-evenly;
+            
+            input
+            {
+                width:70%;
+                margin-top: 15px;;
+            }
+            
+        }
+        
         
         .addBtn{
            position:absolute;
