--- a/src/scss/outerpage.scss
+++ b/src/scss/outerpage.scss
@@ -1,7 +1,11 @@
 *{
     padding: 0;
     margin: 0;
+   
 }
+.example::-webkit-scrollbar {
+    display: none;
+  }
 .outerheaderBtn{
     border: 1px solid #E8927C;
     border-radius: 50px;
@@ -131,6 +135,7 @@
 
 
 .loginBackground{
+    overflow: hidden;
     background-image: url(../images/loginbg.png) ;
     background-size: cover;
     .leftlogin{
