--- a/src/scss/innerpages.scss
+++ b/src/scss/innerpages.scss
@@ -21,7 +21,8 @@
         position: sticky;
         top: 0;
         height: 100vh;
-        padding: 10% 0;
+        padding-top: 10% ;
+        
         .desktoprel{
             position: relative;
             height: 100vh !important;
