--- a/src/scss/innerpages.scss
+++ b/src/scss/innerpages.scss
@@ -52,12 +52,25 @@
     }
 }
 
-::-webkit-input-placeholder { 
-        color:#E0E0E0;
-      }
-.innerpageright{
-    
 
+.innerpageright{
+    // .bullet
+    // {
+    //     color:#E8927C;
+    //     width: 12px;
+    //     height: 20px;
+    // }
+    .age
+    {
+        height:60px;
+        width:20px;
+        margin-top:190px;
+    }
+    
+    .mobilechar{
+        width:50%;
+        height:40%;
+    }
     .style-box{
         
         padding-left: 10px;
