--- a/src/scss/outerpage.scss
+++ b/src/scss/outerpage.scss
@@ -23,6 +23,8 @@
     font-size: 12px;
 }
 
+
+
 .otherDayinput {
     width: 75px;
     opacity: 1 !important;
@@ -30,7 +32,20 @@
     outline: none;
     border-bottom: 1px solid gray;
 }
+.form-control::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: #E0E0E0;
+    opacity: 1; /* Firefox */
+  }
 
+ input[type=checkbox]:checked {
+  /*CSS after CHECKED*/
+  color: #ffd369;
+}
+.labelfontsmall
+{
+    font-size:smaller;
+    white-space: nowrap;
+}
 .css-prp
 {
   color: #d3755f;
