analytics chart + contact width

--- a/src/scss/outerpage.scss
+++ b/src/scss/outerpage.scss
@@ -155,7 +155,8 @@
     .contactbtn{
         border: 1px solid #E8927C;
         border-radius: 50px;
-        color: #E8927C;
+        background-color: #E8927C;
+        color: #fff;
         margin: 0 auto;
     }
     .ContctOptionCard{
@@ -249,6 +250,9 @@
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
     .desktopOuterHide{
         display: inline-block;
+    }
+    .contactbtn{
+        width:100%;
     }
     .mobileOuterHide{
         display: none;
