--- a/src/scss/outerpage.scss
+++ b/src/scss/outerpage.scss
@@ -170,19 +170,19 @@
 
 .loginBackground{
     overflow: hidden;
-    background-image: url(../images/loginbg.png) ;
-    background-size: cover;
-    .leftlogin{
-        padding: 2%;
-        h1,h3{
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            color: #fff;
-            a {
-                margin-top: 12px;
-            }
-        }
+    background-color: #d3755f;
+    color:white;
+    text-align: center;
+    padding:0px;
+    margin: auto;
+    .btn{
+        color:white;
+        font-size: 18px;
+        font-weight: 900;
+        font-family: monospace;
+        text-align: center;
+        cursor: pointer;
+        width: 100%;
     }
     .loginFormDiv{
         width: 50%;
